[package]
name = "simple-zip"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license =  "MIT"
description = "A library for working with compressed files"
authors = ["Gustavo Mendonça, <https://github.com/swxtz>"]

[dependencies]
zip = { version = "0.6.6" }
