[package]
name = "simple-zip"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license =  "MIT"
authors = ["Gustavo Mendonça, <https://github.com/swxtz>"]
repository = "https://github.com/swxtz/simple-zip"

description = "Rust-based Library for File Compression and Decompression"
categories = ["compression", "filesystem"]
keywords = ["gzip", "deflate", "zlib", "encoding", "zip"]

[features]
default = ["zip"]
zip = []

[dependencies]
zip = { version = "0.6.6" }
tempfile = "3.9.0"
flate2 = "1.0.28"
